--- a/PAGES/10d_simd_independence/index.html
+++ b/PAGES/10d_simd_independence/index.html
@@ -2792,17 +2792,17 @@ document.querySelector('.toggleMobile').checked = false;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>Broadcasting strongly favors the application of SIMD instructions. In contrast, whether and when for-loops apply SIMD is more complex. Furthermore, the heuristics of the compiler, while powerful, aren&#39;t foolproof. Indeed, it&#39;s entirely possible that SIMD is implemented when it actually reduces performance or not applied when it would&#39;ve been advantageous. To address this, Julia provides the <code>@simd</code> macro to manually implement SIMD, giving developers a more granular control over the optimization process. </p>
+<p>Broadcasting heavily favors the application of SIMD instructions. In contrast, whether and when for-loops apply SIMD turns out to be more complex. Furthermore, the heuristics of the compiler, while powerful, aren&#39;t without flaws. Indeed, it&#39;s entirely possible that SIMD is implemented when it actually reduces performance or not applied when it would&#39;ve been advantageous. To address this, Julia provides the <code>@simd</code> macro to manually implement SIMD, giving developers a more granular control over the optimization process. </p>
 <p>Effective application of SIMD requires identifying the conditions under which it can be applied. Failing to meet these criteria can render SIMD infeasible or require code adaptations that slow down computation. Specifically, the ideal conditions for leveraging SIMD instructions are:</p>
 <ul>
-<li><p><strong>Independence of Iterations</strong>: Except reductions, which have a specific treatment to ensure feasibility.</p>
+<li><p><strong>Independence of Iterations</strong>: Except for reductions, which are specifically handled to ensure their feasibility.</p>
 </li>
 <li><p><strong>Unit Strides</strong>: Elements in collections must be accessed sequentially.</p>
 </li>
 <li><p><strong>No Conditional Statements</strong>: The loop body should consist solely of straight-line code.</p>
 </li>
 </ul>
-<p>In the upcoming sections, we&#39;ll elaborate on each of these conditions, also providing guidance on how to address scenarios not conforming to them. This section in particular exclusively focus on the first item. </p>
+<p>In the upcoming sections, we&#39;ll elaborate on each of these items, additionally providing guidance on how to address scenarios not conforming to them. This section in particular exclusively focuses on the independence of iterations.</p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Warning!</b> - Determining Whether SIMD Has Been Implemented </span>  </div>  <div class=content>     Assessing whether SIMD instructions are implemented requires inspecting the compiled code. Due to the complexity of this approach, we&#39;ll instead rely on execution times as a practical indicator.  </div>  </div>
@@ -2816,8 +2816,8 @@ document.querySelector('.toggleMobile').checked = false;
       <div class="col-lg- mx-auto">
         <h2>Remarks About @simd in For-Loops</h2></p>
 <p>Recall from <a href="/julia_book/PAGES/10b_macrosAlgorithms/#macros_could_be_disregarded_or_applied_automatically_by_the_compiler">the previous section</a> that the impact of macros on computational methods is intricate. This arises because macros only serve as a hint to the compiler, rather than a strict directive. Consequently, macros suggest techniques that the compiler may eventually discard or would have implemented regardless—the compiler has the final say on which optimizations are worth adopting. In this context, the inclusion of <code>@simd</code> in a for-loop far from guarantees that SIMD will actually be implemented.  </p>
-<p>Furthermore, it&#39;s notoriously difficult to predict whether SIMD instructions are beneficial in particular scenarios. This is due to several reasons. Firstly, different CPU architectures provide varying levels of support for SIMD instructions. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For instance, x86 architectures &#40;Intel and AMD processors&#41;, offer SSE &#40;Streaming SIMD Extensions&#41; and AVX &#40;Advanced Vector Extensions&#41;. In turn, each comprises variants supporting different vector widths and operations &#40;e.g., the variant AVX-512 in Intel Xeon&#39;s processors&#41;.  </span></span> This diversity in SIMD capabilities means that the benefits of SIMD tend to vary greatly by hardware.</p>
-<p>Second, as we already mentioned, it&#39;s hard to anticipate when and how SIMD will be actually applied in our code. The compiler relies on sophisticated heuristics to determine when SIMD may be advantageous, but they aren&#39;t infallible. Indeed, it&#39;s entirely possible that SIMD is implemented when it actually reduces performance or not applied when it would&#39;ve been advantageous.</p>
+<p>Furthermore, it&#39;s notoriously difficult to predict whether SIMD instructions are beneficial in particular scenarios. This is due to several factors. Firstly, different CPU architectures provide varying levels of support for SIMD instructions. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For instance, x86 architectures &#40;Intel and AMD processors&#41;, offer SSE &#40;Streaming SIMD Extensions&#41; and AVX &#40;Advanced Vector Extensions&#41;. In turn, each comprises variants supporting different vector widths and operations &#40;e.g., the variant AVX-512 in Intel Xeon&#39;s processors&#41;.  </span></span> This diversity in SIMD capabilities means that the benefits of SIMD tend to vary greatly by hardware.</p>
+<p>Second, as we already mentioned, it&#39;s hard to anticipate when and how SIMD will be applied in our code. The compiler relies on sophisticated heuristics to determine when SIMD may be advantageous, but they aren&#39;t infallible. Indeed, it&#39;s entirely possible that SIMD is implemented when it actually reduces performance or not applied when it would&#39;ve been advantageous.</p>
 <p>Despite these complexities, structuring operations in certain ways can improve the likelihood of implementing SIMD beneficially. By identifying these conditions, we&#39;ll be able to write code that&#39;s more amenable to SIMD optimization. It&#39;s worth remarking, though, that <strong>the recommendations we'll present should be interpreted as general principles, rather than absolute rules</strong>. Given the complexity of SIMD, benchmarking remains necessary to validate the existence of any performance improvement.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Safety of SIMD</strong>  </span>  </div>  <div class=content>     Strictly speaking, SIMD is a form of parallelization. We&#39;ll see in subsequent sections that parallelization may render code unsafe and lead to catastrophic errors when used improperly. <code>@simd</code> doesn&#39;t involve these types of risks, since it&#39;s been designed to apply only when it&#39;s safe to do so. Specifically, the compiler will disregard SIMD if the conditions for its safe application aren&#39;t met.  </div>  </div>
@@ -2832,7 +2832,7 @@ document.querySelector('.toggleMobile').checked = false;
         <h2>Independence of Iterations</h2></p>
 <p>To effectively apply SIMD, iterations should be independent. This means that no iteration should depend on the results of previous iterations or affect the results of subsequent ones. When this condition is met, each iteration can be executed in parallel. A typical scenario is when we need to apply some function \(f\left(x_{i}\right)\) to each element \(x_i\) of a vector <code>x</code>. </p>
 <p>In the following, we illustrate this case via a polynomial transformation of <code>x</code>. The transformation will be done through for-loops with and without SIMD. We&#39;ll also compare these approaches with broadcasting, which applies SIMD automatically. </p>
-<p>Importantly, as we&#39;ll explain in a subsequent section, applying <code>@simd</code> in for-loops requires the <code>@inbounds</code> macro. We&#39;ll see that, essentially, checking index bounds act as a condition, with the existence of execution branches hinder or directly prevent the application of SIMD.</p>
+<p>Importantly, as we&#39;ll explain in a subsequent section, applying <code>@simd</code> in for-loops requires the <code>@inbounds</code> macro. We&#39;ll see that, essentially, checking index bounds introduces a condition, giving rise to execution branches that hinder or directly prevent the application of SIMD.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2884,8 +2884,8 @@ foo&#40;x&#41; &#61; @. x / 2 &#43; x^2 / 3</code></pre> </div></div>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>A Special Case of Dependence: Reductions</h2></p>
-<p>SIMD requires that iterations are independent. One exception to this rule is given by reductions, which have been carefully designed for its proper handle. </p>
-<p>Julia leverages SIMD automatically for reductions involving integers. Instead, reductions with floating-point numbers require the explicit addition of the <code>@simd</code> macro. The following example demonstrates this fact. For the case of integers, we see that there are no difference in execution times with and without <code>@simd</code>. </p>
+<p>SIMD requires that iterations are independent. One exception to this rule is given by reductions, which have been carefully designed for its proper handling. </p>
+<p>Julia leverages SIMD automatically for reductions involving integers. Instead, reductions with floating-point numbers require the explicit addition of the <code>@simd</code> macro. The following example demonstrates this fact. For the case of integers, we see that there are no differences in execution times with and without <code>@simd</code>. </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3000,7 +3000,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 16, 2025 
+          © Martin Alfaro <br>Last Modified February 17, 2025 
       </span> 
   </div> 
 </footer>
