--- a/PAGES/01a_installation/index.html
+++ b/PAGES/01a_installation/index.html
@@ -2831,7 +2831,7 @@ document.querySelector('.toggleMobile').checked = false;
 <li><p><a href="https://discourse.julialang.org/">Julia Discourse</a>. Official forum to ask questions about Julia. </p>
 </li>
 </ol>
- <div style="visibility: hidden;margin-bottom:-4em">
+ <div style="display: none ;margin-bottom:-4em">
 this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
 </div>
 <p>      </div>
@@ -2856,7 +2856,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 17, 2025 
+          © Martin Alfaro <br>Last Modified February 18, 2025 
       </span> 
   </div> 
 </footer>
