--- a/PAGES/01b_basics/index.html
+++ b/PAGES/01b_basics/index.html
@@ -2878,7 +2878,7 @@ joinpath&#40;&quot;/&quot;, &quot;user&quot;, &quot;file.jl&quot;&#41;</code></p
 <p></div></div> 
  </div></div>
 <p>  </p></details></div>
- <div style="visibility: hidden;margin-bottom:-4em">
+ <div style="display:none ;margin-bottom:-4em">
 this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
 </div>
 <p>      </div>
@@ -2903,7 +2903,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 17, 2025 
+          © Martin Alfaro <br>Last Modified February 18, 2025 
       </span> 
   </div> 
 </footer>
