--- a/PAGES/11c_multithread_tasks/index.html
+++ b/PAGES/11c_multithread_tasks/index.html
@@ -2807,7 +2807,7 @@ document.querySelector('.toggleMobile').checked = false;
 <p>Julia initializes every session with a given pool of threads available. Each of these threads is responsible for executing a given set of instructions. Consequently, the number of threads delimits the number of instructions that the CPU can handle simultaneously.</p>
 <p>By default, Julia only operates with a single thread, requiring setting an alternative number of threads to enable multithreading. You can achieve this in VSCode by going to  <em>File</em> &gt;  <em>Preferences</em> &gt;  <em>Settings</em>. Then, you should search for the keyword  <em>threads</em>, prompting the following line:</p>
 <p> <div class="multiple_pics">  
-    <img src="/julia_book/assets/PAGES/11c_multithread_tasks/pics/pic01.png" style="width:800px; height:auto; margin-top:1em;">    
+    <img src="/julia_book/assets/PAGES/11c_multithread_tasks/pics/pic01.png" style="width:800px; height:auto; max-width:98%; margin-top:1em;">    
 </div> <br/></p>
 <p>After pressing  <em>Edit in settings.json</em>, you should add the line <code>&quot;julia.NumThreads&quot;: &quot;auto&quot;</code>. This will automatically identify the number of threads based on your computer&#39;s features &#40;either logical or physical threads available&#41;. <strong>Notice that the effects won't take place on the current session.</strong> </p>
 <p>To check whether the effects have taken place, use the command <code>Threads.nthreads&#40;&#41;</code>. This displays the number of threads available in the session. Any number greater than one will indicate that multithreading is activated. Notice also that the changes are permanent, so that every new Julia session will start with the number of threads specified. </p>
@@ -3019,7 +3019,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 17, 2025 
+          © Martin Alfaro <br>Last Modified February 18, 2025 
       </span> 
   </div> 
 </footer>
