--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <!-- HERE WE ADD ANY CSS ELEMENT WE WANT TO ADD
 (don't confuse head with header, head applies globally) -->
 
-<link rel="stylesheet" href="/libs/katex/katex.min.css">
+<link rel="stylesheet" href="/julia_book/libs/katex/katex.min.css">
 
 <!-- FOR LATEX -->
 <!-- <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/aaaakshat/cm-web-fonts@latest/fonts.css"></link> -->
@@ -29,7 +29,7 @@ href="https://fonts.googleapis.com/css?family=Open+Sans"></link> -->
 <!-- Montserrat|Roboto|Lato|Raleway|Work+Sans|Raleway -->     
   
 
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/julia_book/css/bootstrap.min.css">
   <style>
 .section-bg-color {
   background-color: rgba(63, 99, 136, 0.07);
@@ -53,17 +53,17 @@ header .jumbotron {
   background-size: 100%;  
 }
 </style>
-  <link rel="stylesheet" href="/css/custom.css">
+  <link rel="stylesheet" href="/julia_book/css/custom.css">
 
     
 <!-- WINDOWS TAB -->
   <title>Julia Book - Martin Alfaro</title>
-  <link rel="icon" type="image/png"  href="/assets/icons/favicon.ico">
+  <link rel="icon" type="image/png"  href="/julia_book/assets/icons/favicon.ico">
 
 <!-- for LUNR -->
-  <script src="/libs/lunr/lunr.min.js"></script>
-  <script src="/libs/lunr/lunr_index.js"></script>
-  <script src="/libs/lunr/lunrclient.min.js"></script>
+  <script src="/julia_book/libs/lunr/lunr.min.js"></script>
+  <script src="/julia_book/libs/lunr/lunr_index.js"></script>
+  <script src="/julia_book/libs/lunr/lunrclient.min.js"></script>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -418,13 +418,13 @@ section a:hover{
 </style> 
  <!-- <div class="left_bar" style="color:white;">
     <div style="float:center; align-items:center; justify-content: center; height:160px; width:calc(90px * 1.55165);">
-        <img src="/assets/pics_html/julia_logo-dark.svg"
+        <img src="/julia_book/assets/pics_html/julia_logo-dark.svg"
         style= "position:relative; width:90%; height:auto; padding-top:45px;  padding-left:10px;">     
     </div> -->
 
 <div class="left_bar" style="color:white;">
   <span>
-    <img src="/assets/pics_html/julia_logo-dark.svg" alt="pic" style="padding: 12px; padding-right:28px;padding-top:44px"
+    <img src="/julia_book/assets/pics_html/julia_logo-dark.svg" alt="pic" style="padding: 12px; padding-right:28px;padding-top:44px"
       width="160px" height=auto>
   </span>
 
@@ -443,14 +443,14 @@ section a:hover{
 
   <ul>
     <li style="text-transform: uppercase">
-      <a href="/index.html"><img src="/assets/icons/home.png"
+      <a href="/julia_book/index.html"><img src="/julia_book/assets/icons/home.png"
           style="width:15%; height:auto;opacity:0.9;padding-bottom:5px;">
         Home
       </a>
     </li>
 
     <li style="text-transform: uppercase">
-      <a href="/list_posts/"><img src="/assets/icons/books03.png"
+      <a href="/julia_book/list_posts/"><img src="/julia_book/assets/icons/books03.png"
           style="width:15%; height:auto;opacity:0.9;padding-bottom:5px;">
         Chapters
       </a>
@@ -458,7 +458,7 @@ section a:hover{
     <li>      
       <div style="text-indent:0;">
         <button class="modalButton" style="text-transform: uppercase">
-          <img src="/assets/icons/keyboard01.png" style="width:20%; height:auto; opacity:0.9;margin-bottom:-26px; margin-left:-30px; padding-right:4px;">
+          <img src="/julia_book/assets/icons/keyboard01.png" style="width:20%; height:auto; opacity:0.9;margin-bottom:-26px; margin-left:-30px; padding-right:4px;">
           <span style="margin-left:-0.2em;">Notation &<div style="margin-left:-1.2em; margin-top:-3em;">Hotkeys</div></span>
         </button>                   
       <div class="kbd_shortcuts">
@@ -770,7 +770,7 @@ section a:hover{
     </div> 
     </li>
     <li style="text-transform: uppercase">
-      <a href="/links/"><img src="/assets/icons/links.png"
+      <a href="/julia_book/links/"><img src="/julia_book/assets/icons/links.png"
           style="width:15%; height:auto;opacity:0.9;padding-bottom:5px;">
         Links
       </a>
@@ -785,7 +785,7 @@ section a:hover{
   </ul>
   
   <div class="personal_website">
-    <a href="https://alfaromartino.github.io"><img src="/assets/icons/personal.png"
+    <a href="https://alfaromartino.github.io"><img src="/julia_book/assets/icons/personal.png"
         style="width:18%; height:auto;opacity:0.9;margin-bottom:-14px; padding-right:4px">
       Personal
       <!-- <div style="margin-left:calc(30px + 6px); margin-top:-0.5em;"> Website</div> -->
@@ -2020,7 +2020,7 @@ background: transparent;
 </style>
 <!-- <div class="left_bar_mobile" style="color:white;">
     <div style="float:center; align-items:center; justify-content: center; height:160px; width:calc(90px * 1.55165);">
-        <img src="/assets/pics_html/julia_logo-dark.svg"
+        <img src="/julia_book/assets/pics_html/julia_logo-dark.svg"
         style= "position:relative; width:90%; height:auto; padding-top:45px;  padding-left:10px;">     
     </div> -->
 
@@ -2030,7 +2030,7 @@ background: transparent;
 <div class="left_bar_mobile" style="color:white;">
 
   <!-- <span>
-    <img src="/assets/pics_html/julia_logo-dark.svg" alt="pic" style="padding: 12px; padding-right:28px;padding-top:36px"
+    <img src="/julia_book/assets/pics_html/julia_logo-dark.svg" alt="pic" style="padding: 12px; padding-right:28px;padding-top:36px"
       width="{{contentPages_topleft_space_mobile}}" height=auto>
   </span> -->
 
@@ -2045,14 +2045,14 @@ background: transparent;
 
   <ul>
     <li>
-      <a href="/index.html"><img src="/assets/icons/home.png"
+      <a href="/julia_book/index.html"><img src="/julia_book/assets/icons/home.png"
           style="width:15%; height:auto;opacity:0.9;padding-bottom:0px;">
         HOME
       </a>
     </li>
 
     <li>
-      <a href="/list_posts/"><img src="/assets/icons/books03.png"
+      <a href="/julia_book/list_posts/"><img src="/julia_book/assets/icons/books03.png"
           style="width:15%; height:auto;opacity:0.9;padding-bottom:0px;">
         CHAPTERS
       </a>
@@ -2275,7 +2275,7 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Welcome to the Site!</h2></p>
 <p><span style="color: rgb(168, 50, 50);"><strong>The website is still work in progress in terms of writing, content, and subjects covered</strong></span>. </p>
-<p>The chapters included so far can be found <a href="/list_posts/">here</a>. I&#39;ll continue adding new content as I go.</p>
+<p>The chapters included so far can be found <a href="/julia_book/list_posts/">here</a>. I&#39;ll continue adding new content as I go.</p>
 <p>If you find any mistakes, typos, or have any suggestions, please open an issue on the <a href="https://github.com/alfaromartino/julia_book/issues">book&#39;s GitHub page</a>. Your feedback is greatly appreciated&#33;</p>
 <p>      </div>
     </div>
@@ -2364,15 +2364,15 @@ color: white;
 <footer class="py-1">    
   <!-- <p class="m-0"> -->
   <div class="container">
-     <span class="left-text"><a href="/PAGES/11g_multithread_packages" class="prevPage"><img src="/assets/icons/prev-page.png"
+     <span class="left-text"><a href="/julia_book/PAGES/11g_multithread_packages" class="prevPage"><img src="/julia_book/assets/icons/prev-page.png"
       style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> 
       Previous Section 
       <span class="ctrl-text">( <kbd>Ctrl + 🠘</kbd> )</span>
       </a></span>
-     <span class="right-text"><a href="/PAGES/01a_installation" class="nextPage"> 
+     <span class="right-text"><a href="/julia_book/PAGES/01a_installation" class="nextPage"> 
       Next Section 
       <span class="ctrl-text">( <kbd>Ctrl + 🠚</kbd> )</span>
-      <img src="/assets/icons/next-page.png"
+      <img src="/julia_book/assets/icons/next-page.png"
       style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
   <span class="center-text">  © Martin Alfaro <br>Last Modified February 19, 2025 </span>  
 </div>
@@ -2463,13 +2463,13 @@ function goToNextPage() {
 
 <!-- ADDED BY FRANKLIN -->
   
-      <script src="/libs/katex/katex.min.js"></script>
-<script src="/libs/katex/auto-render.min.js"></script>
+      <script src="/julia_book/libs/katex/katex.min.js"></script>
+<script src="/julia_book/libs/katex/auto-render.min.js"></script>
 <script>renderMathInElement(document.body)</script>
 
   
   
-  <script src="/libs/simple-scrollspy.min.js"></script>
+  <script src="/julia_book/libs/simple-scrollspy.min.js"></script>
   <script>
   window.onload = function () {
     scrollSpy('#navbarResponsive', {
@@ -2818,11 +2818,11 @@ for multiple pics in a row
 <div class="row">
   <div class="column2">
   <h2>CORRECT Interpretation</h2>
-    <img src="/assets/tikz/3d_mutation/interpret01a.svg" style="width:400px ; height:auto; padding-right:0em;">
+    <img src="/julia_book/assets/tikz/3d_mutation/interpret01a.svg" style="width:400px ; height:auto; padding-right:0em;">
   </div>
   <div class="column2">
   <h2>INCORRECT Interpretation</h2>
-    <img src="/assets/tikz/3d_mutation/interpret01b.svg" style="width:435px ; height:auto">
+    <img src="/julia_book/assets/tikz/3d_mutation/interpret01b.svg" style="width:435px ; height:auto">
   </div>  
 </div>
 </div>
@@ -2850,7 +2850,7 @@ for multiple pics in a row
 
   
 <!-- COPY BUTTON -->
-<script src="/libs/clipboard.min.js"></script> 
+<script src="/julia_book/libs/clipboard.min.js"></script> 
 <!-- http://tutsplus.github.io/clipboard/ -->
 
 <script>
