--- a/links/index.html
+++ b/links/index.html
@@ -19,7 +19,7 @@
    <!-- HERE WE ADD ANY CSS ELEMENT WE WANT TO ADD
 (don't confuse head with header, head applies globally) -->
 
-<link rel="stylesheet" href="/libs/katex/katex.min.css">
+<link rel="stylesheet" href="/julia_book/libs/katex/katex.min.css">
 
 <!-- FOR LATEX -->
 <!-- <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/aaaakshat/cm-web-fonts@latest/fonts.css"></link> -->
@@ -27,10 +27,10 @@
 <!-- <link rel="stylesheet" 
 href="https://fonts.googleapis.com/css?family=Open+Sans"></link> -->
 <!-- Montserrat|Roboto|Lato|Raleway|Work+Sans|Raleway -->     
-   <link rel="stylesheet" href="/libs/highlight/styles/vs_myversion.css">
+   <link rel="stylesheet" href="/julia_book/libs/highlight/styles/vs_myversion.css">
    
 
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/julia_book/css/bootstrap.min.css">
   <style>
 .section-bg-color {
   background-color: rgba(63, 99, 136, 0.07);
@@ -54,17 +54,17 @@ header .jumbotron {
   background-size: 100%;  
 }
 </style>
-  <link rel="stylesheet" href="/css/custom.css">
+  <link rel="stylesheet" href="/julia_book/css/custom.css">
 
     
 <!-- WINDOWS TAB -->
   <title>Julia Book - Martin Alfaro</title>
-  <link rel="icon" type="image/png"  href="/assets/icons/favicon.ico">
+  <link rel="icon" type="image/png"  href="/julia_book/assets/icons/favicon.ico">
 
 <!-- for LUNR -->
-  <script src="/libs/lunr/lunr.min.js"></script>
-  <script src="/libs/lunr/lunr_index.js"></script>
-  <script src="/libs/lunr/lunrclient.min.js"></script>
+  <script src="/julia_book/libs/lunr/lunr.min.js"></script>
+  <script src="/julia_book/libs/lunr/lunr_index.js"></script>
+  <script src="/julia_book/libs/lunr/lunrclient.min.js"></script>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -411,13 +411,13 @@ section a:hover{
 </style> 
  <!-- <div class="left_bar" style="color:white;">
     <div style="float:center; align-items:center; justify-content: center; height:160px; width:calc(90px * 1.55165);">
-        <img src="/assets/pics_html/julia_logo-dark.svg"
+        <img src="/julia_book/assets/pics_html/julia_logo-dark.svg"
         style= "position:relative; width:90%; height:auto; padding-top:45px;  padding-left:10px;">     
     </div> -->
 
 <div class="left_bar" style="color:white;">
   <span>
-    <img src="/assets/pics_html/julia_logo-dark.svg" alt="pic" style="padding: 12px; padding-right:28px;padding-top:44px"
+    <img src="/julia_book/assets/pics_html/julia_logo-dark.svg" alt="pic" style="padding: 12px; padding-right:28px;padding-top:44px"
       width="160px" height=auto>
   </span>
 
@@ -436,14 +436,14 @@ section a:hover{
 
   <ul>
     <li style="text-transform: uppercase">
-      <a href="/index.html"><img src="/assets/icons/home.png"
+      <a href="/julia_book/index.html"><img src="/julia_book/assets/icons/home.png"
           style="width:15%; height:auto;opacity:0.9;padding-bottom:5px;">
         Home
       </a>
     </li>
 
     <li style="text-transform: uppercase">
-      <a href="/list_posts/"><img src="/assets/icons/books03.png"
+      <a href="/julia_book/list_posts/"><img src="/julia_book/assets/icons/books03.png"
           style="width:15%; height:auto;opacity:0.9;padding-bottom:5px;">
         Chapters
       </a>
@@ -451,7 +451,7 @@ section a:hover{
     <li>      
       <div style="text-indent:0;">
         <button class="modalButton" style="text-transform: uppercase">
-          <img src="/assets/icons/keyboard01.png" style="width:20%; height:auto; opacity:0.9;margin-bottom:-26px; margin-left:-30px; padding-right:4px;">
+          <img src="/julia_book/assets/icons/keyboard01.png" style="width:20%; height:auto; opacity:0.9;margin-bottom:-26px; margin-left:-30px; padding-right:4px;">
           <span style="margin-left:-0.2em;">Notation &<div style="margin-left:-1.2em; margin-top:-3em;">Hotkeys</div></span>
         </button>                   
       <div class="kbd_shortcuts">
@@ -763,7 +763,7 @@ section a:hover{
     </div> 
     </li>
     <li style="text-transform: uppercase">
-      <a href="/links/"><img src="/assets/icons/links.png"
+      <a href="/julia_book/links/"><img src="/julia_book/assets/icons/links.png"
           style="width:15%; height:auto;opacity:0.9;padding-bottom:5px;">
         Links
       </a>
@@ -778,7 +778,7 @@ section a:hover{
   </ul>
   
   <div class="personal_website">
-    <a href="https://alfaromartino.github.io"><img src="/assets/icons/personal.png"
+    <a href="https://alfaromartino.github.io"><img src="/julia_book/assets/icons/personal.png"
         style="width:18%; height:auto;opacity:0.9;margin-bottom:-14px; padding-right:4px">
       Personal
       <!-- <div style="margin-left:calc(30px + 6px); margin-top:-0.5em;"> Website</div> -->
@@ -2051,7 +2051,7 @@ background: transparent;
 </style>
 <!-- <div class="left_bar_mobile" style="color:white;">
     <div style="float:center; align-items:center; justify-content: center; height:160px; width:calc(90px * 1.55165);">
-        <img src="/assets/pics_html/julia_logo-dark.svg"
+        <img src="/julia_book/assets/pics_html/julia_logo-dark.svg"
         style= "position:relative; width:90%; height:auto; padding-top:45px;  padding-left:10px;">     
     </div> -->
 
@@ -2061,7 +2061,7 @@ background: transparent;
 <div class="left_bar_mobile" style="color:white;">
 
   <!-- <span>
-    <img src="/assets/pics_html/julia_logo-dark.svg" alt="pic" style="padding: 12px; padding-right:28px;padding-top:36px"
+    <img src="/julia_book/assets/pics_html/julia_logo-dark.svg" alt="pic" style="padding: 12px; padding-right:28px;padding-top:36px"
       width="{{contentPages_topleft_space_mobile}}" height=auto>
   </span> -->
 
@@ -2076,14 +2076,14 @@ background: transparent;
 
   <ul>
     <li>
-      <a href="/index.html"><img src="/assets/icons/home.png"
+      <a href="/julia_book/index.html"><img src="/julia_book/assets/icons/home.png"
           style="width:15%; height:auto;opacity:0.9;padding-bottom:0px;">
         HOME
       </a>
     </li>
 
     <li>
-      <a href="/list_posts/"><img src="/assets/icons/books03.png"
+      <a href="/julia_book/list_posts/"><img src="/julia_book/assets/icons/books03.png"
           style="width:15%; height:auto;opacity:0.9;padding-bottom:0px;">
         CHAPTERS
       </a>
@@ -2460,20 +2460,20 @@ function goToNextPage() {
 
 <!-- ADDED BY FRANKLIN -->
   
-      <script src="/libs/katex/katex.min.js"></script>
-<script src="/libs/katex/auto-render.min.js"></script>
+      <script src="/julia_book/libs/katex/katex.min.js"></script>
+<script src="/julia_book/libs/katex/auto-render.min.js"></script>
 <script>renderMathInElement(document.body)</script>
 
   
   
-      <script src="/libs/highlight/highlight.js"></script>
-<!-- <script src="/libs/highlight/julia.highlight.js"></script> -->
+      <script src="/julia_book/libs/highlight/highlight.js"></script>
+<!-- <script src="/julia_book/libs/highlight/julia.highlight.js"></script> -->
 <script>hljs.highlightAll();hljs.configure({tabReplace: '    '});</script>
 <!-- <script>hljs.initHighlightingOnLoad();hljs.configure({tabReplace: '    '});</script> -->
 
 
   
-  <script src="/libs/simple-scrollspy.min.js"></script>
+  <script src="/julia_book/libs/simple-scrollspy.min.js"></script>
   <script>
   window.onload = function () {
     scrollSpy('#navbarResponsive', {
@@ -2822,11 +2822,11 @@ for multiple pics in a row
 <div class="row">
   <div class="column2">
   <h2>CORRECT Interpretation</h2>
-    <img src="/assets/tikz/3d_mutation/interpret01a.svg" style="width:400px ; height:auto; padding-right:0em;">
+    <img src="/julia_book/assets/tikz/3d_mutation/interpret01a.svg" style="width:400px ; height:auto; padding-right:0em;">
   </div>
   <div class="column2">
   <h2>INCORRECT Interpretation</h2>
-    <img src="/assets/tikz/3d_mutation/interpret01b.svg" style="width:435px ; height:auto">
+    <img src="/julia_book/assets/tikz/3d_mutation/interpret01b.svg" style="width:435px ; height:auto">
   </div>  
 </div>
 </div>
@@ -2854,7 +2854,7 @@ for multiple pics in a row
 
   
 <!-- COPY BUTTON -->
-<script src="/libs/clipboard.min.js"></script> 
+<script src="/julia_book/libs/clipboard.min.js"></script> 
 <!-- http://tutsplus.github.io/clipboard/ -->
 
 <script>
